--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
     <ul class="layui-nav layui-layout-right">
       <li class="layui-nav-item layui-hide layui-show-md-inline-block">
         <a href="javascript:;" class="useifo">
-          <!-- <img src="http:////tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg" class="layui-nav-img"> -->
-          <img src="" alt="" class="hh">
+          <img src="" class="layui-nav-img">
+          <!-- <img src="" alt="" class="hh"> -->
           <span class="text-avatar">A</span>
           个人中心
         </a>
         <dl class="layui-nav-child">
-          <dd><a href="">基本资料</a></dd>
-          <dd><a href="">更换头像</a></dd>
-          <dd><a href="">重置密码</a></dd>
+          <dd><a href="./user/user_info.html" target="fm">基本资料</a></dd>
+          <dd><a href="./user/user_avatar.html" target="fm">更换头像</a></dd>
+          <dd><a href="./user/user_pwb.html" target="fm">重置密码</a></dd>
         </dl>
       </li>
       <li class="layui-nav-item" lay-header-event="menuRight" lay-unselect>
@@ -63,11 +63,11 @@
           </dl>
         </li>
         <li class="layui-nav-item">
-          <a href="javascript:;"><span class="iconfont icon-user"></span>个人中心</a>
+          <a href="javascript:;" ><span class="iconfont icon-user"></span>个人中心</a>
           <dl class="layui-nav-child">
-            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>基本资料</a></dd>
-            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>跟换头像</a></dd>
-            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>重置密码</a></dd>
+            <dd><a href="./user/user_info.html" target="fm"><i class="layui-icon layui-icon-app"></i>基本资料</a></dd>
+            <dd><a href="./user/user_avatar.html" target="fm"><i class="layui-icon layui-icon-app"></i>跟换头像</a></dd>
+            <dd><a href="./user/user_pwb.html" target="fm"><i class="layui-icon layui-icon-app"></i>重置密码</a></dd>
           </dl>
         </li>
       </ul>
